--- a/first project/index.html
+++ b/first project/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/style.css">
     <script src="dist/main.js"></script>
-    <title>Document</title>
+    <title>Food & Drink search for recipes</title>
 </head>
 <body>
-    <div>hello world</div>
+    
 </body>
 </html>
