show result of search

--- a/first project/index.html
+++ b/first project/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <script src="dist/main.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Food & Drink search for recipes</title>
@@ -15,12 +16,11 @@
             <div class="article_searcher">
                 <input id="searchLine" type="text" name="search" class="article_searcher_inputSearch" placeholder="Search Recipes">
                 <button id="article_searcher_buttonSearch">Search</button>
+                <i class="far fa-star"></i>
             </div>
-            <article>
-                <ul>
-                    <li id="li"></li>
+                <ul class="resultSearch">
+                   
                 </ul>
-            </article>
         </article>
         <aside class="aside_favorites"></aside>
         <footer class="footer"></footer>
